# sparse-auc

./: .gitignore  .slurm_run.sh.swp  .test_on_13_realsim.py.swp  001isamax.c  CMakeLists.txt  README.md  array_249523_0.out  array_249523_1.out  array_249523_10.out  array_249523_11.out  array_249523_12.out  array_249523_13.out  array_249523_14.out  array_249523_15.out  array_249523_16.out  array_249523_17.out  array_249523_18.out  array_249523_19.out  array_249523_2.out  array_249523_20.out  array_249523_21.out  array_249523_22.out  array_249523_23.out  array_249523_24.out  array_249523_25.out  array_249523_26.out  array_249523_27.out  array_249523_28.out  array_249523_29.out  array_249523_3.out  array_249523_30.out  array_249523_31.out  array_249523_32.out  array_249523_33.out  array_249523_34.out  array_249523_35.out  array_249523_36.out  array_249523_37.out  array_249523_38.out  array_249523_39.out  (+158 more)
algo_wrapper/: algo_base.h  algo_da_solam.c  algo_da_solam.h  algo_hsg_ht.c  algo_hsg_ht.h  algo_solam.c  algo_solam.h  algo_sparse_solam.c  algo_sparse_solam.h  algo_stoht_am.c  algo_stoht_am.h  algo_wrapper.py  auc_curve.c  auc_curve.h  auc_opt_methods.c  auc_opt_methods.h  condat_l1ballproj.c  cuda_spam.cu  fast_pcst.c  fast_pcst.h  head_tail_proj.c  head_tail_proj.h  kth_selection.c  kth_selection.h  loss.c  loss.h  loss_test.c  main_gpu.c  main_wrapper.c  sort.c  sort.h  test_case.c  test_kth_selection.c
baselines/: liblinear.so.3
baselines/icml13_opauc/OPAUC/: OPAUC.m  OPAUC_fd.m  OPAUCr.m  OPAUCs.m  read me.txt
baselines/icml18_fsauc/auc_python/: auc_fs.py  exp_.py  get_idx.py
baselines/icml18_fsauc/src_FSAUC/src/: ASOLAM.m  OPAUC.m  SOLAM.m  SOLAM1.m  get_kappa.m
baselines/icml18_spam/: demo.m  demoCP.m  demoCP_Small.m  demoLarge.m  dempCP_Large.m  fnCP_SPAM_L2.m  fnCP_SPAM_L2.m~  fnCP_SPAM_NET.m  fnDatLoad.m  fnEP_SPAM_L2.m  fnEP_SPAM_NET.m  fnEvaluate.m  fnSave.m  usps_spam_All.fig
baselines/nips16_solam/: EP_a9a_SOLAM.mat  a9a.mat  fnDatLoad.m  fnEP_CV_SOLAM.m  fnEP_SOLAM.m  fnSave.m  sEP_Demo.m
